--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
+    "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
