--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "mongoose": "^8.9.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
