--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "api/contact.js",
-      "dest": "/server.js"
-    }
-  ]
+  "env": {
+    "MY_ENV_VARIABLE": "value"
+  }
 }
